# libvoid

./: .editorconfig  README.md  meson.build
include/: array.h  arrays.h  main.h  str.h  strings.h
scripts/: build.sh  globber.sh  grabber.sh
src/: array.c  arrays.c  main.c  str.c  strings.c
tests/: tests.c  tests.h
